--- a/package.json
+++ b/package.json
@@ -5,5 +5,19 @@
     "mongoose": "^7.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
-  }
+  },
+  "name": "mongodb-assignment",
+  "description": "Answer:",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
