--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "json-stable-stringify": "^1.0.2",
     "mongoose": "^7.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
